// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:listSelect with image option & listClassName 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              表单
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="select"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    单选
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-ListControl amis-Form-control"
            >
              <div
                class="amis-ListControl-items items-wrapper"
              >
                <div
                  class="amis-ListControl-item"
                >
                  <div
                    class="amis-ListControl-itemImage"
                  >
                    <img
                      alt="OptionA"
                      src="https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=3893101144,2877209892&fm=23&gp=0.jpg"
                    />
                  </div>
                  <div
                    class="amis-ListControl-itemLabel"
                  >
                    OptionA
                  </div>
                </div>
                <div
                  class="amis-ListControl-item"
                >
                  <div
                    class="amis-ListControl-itemImage"
                  >
                    <img
                      alt="OptionB"
                      src="https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=3893101144,2877209892&fm=23&gp=0.jpg"
                    />
                  </div>
                  <div
                    class="amis-ListControl-itemLabel"
                  >
                    OptionB
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="amis-Panel-footerWrap"
      >
        <div
          class="amis-Panel-btnToolbar amis-Panel-footer"
        >
          <button
            class="amis-Button amis-Button--primary amis-Button--size-default"
            type="submit"
          >
            <span>
              提交
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:listSelect with multiple & clearable 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              表单
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="select"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    单选
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-ListControl amis-Form-control"
            >
              <div
                class="amis-ListControl-items"
              >
                <div
                  class="amis-ListControl-item is-active"
                >
                  <div
                    class="amis-ListControl-itemLabel"
                  >
                    Option A
                  </div>
                </div>
                <div
                  class="amis-ListControl-item is-active"
                >
                  <div
                    class="amis-ListControl-itemLabel"
                  >
                    Option B
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="amis-Panel-footerWrap"
      >
        <div
          class="amis-Panel-btnToolbar amis-Panel-footer"
        >
          <button
            class="amis-Button amis-Button--primary amis-Button--size-default"
            type="submit"
          >
            <span>
              Submit
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
